geo location check

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<title>CVK TEST</title>    
 		<script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
+			
 			function onDeviceReady() {
-				checkStorage();
+				//checkStorage();
+				navigator.geolocation.getCurrentPosition(onSuccess, onError);
+
 			}
 			function checkStorage() {
 				var language = window.localStorage.getItem("language");
@@ -16,6 +19,24 @@
 				}
 				language = window.localStorage.getItem("language");
 				alert(language);				
+			}
+			function onSuccess(position) {
+				var element = document.getElementById('geolocation');
+				element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
+									'Longitude: '          + position.coords.longitude             + '<br />' +
+									'Altitude: '           + position.coords.altitude              + '<br />' +
+									'Accuracy: '           + position.coords.accuracy              + '<br />' +
+									'Altitude Accuracy: '  + position.coords.altitudeAccuracy      + '<br />' +
+									'Heading: '            + position.coords.heading               + '<br />' +
+									'Speed: '              + position.coords.speed                 + '<br />' +
+									'Timestamp: '          + position.timestamp                    + '<br />';
+			}
+
+			// onError Callback receives a PositionError object
+			//
+			function onError(error) {
+				alert('code: '    + error.code    + '\n' +
+					  'message: ' + error.message + '\n');
 			}
 		</script>
 	</head>
