id added for showing location information

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	</head>
 	<body>
 		<h1>CVK TEST</h1>
+		<p id="geolocation">Finding geolocation...</p>
 	</body>
 	<script type="text/javascript" src="phonegap.js"></script>
 </html>
