--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 			
 			function onDeviceReady() {
 				//checkStorage();
-				navigator.geolocation.getCurrentPosition(onSuccess, onError);
+				//navigator.geolocation.getCurrentPosition(onSuccess, onError);
+				navigator.geolocation.getCurrentPosition(onSuccess);
 
 			}
 			function checkStorage() {
