--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!doctype html>
 <html>
 	<head>
-		<title>CVK TEST</title>    
-		<script type="text/javascript" charset="utf-8">
+		<title>CVK TEST</title>
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>          
+        <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
 			var watchID = null;
 
 			function onDeviceReady() {
+				$.ajax({
+						type       : "POST",
+						url        : "http://system-hostings.dev.wiredelta.com/colomer/api/offers",
+						crossDomain: true,
+						beforeSend : function() {$.mobile.loading('show')},
+						complete   : function() {$.mobile.loading('hide')},
+						data       : {username : 'subin', password : 'passwordx'},
+						dataType   : 'json',
+						success    : function(response) {
+							//console.error(JSON.stringify(response));
+							alert('Works!');
+						},
+						error      : function() {
+							//console.error("error");
+							alert('Not working!');                  
+						}
+					});
 				//checkStorage();
 				//navigator.geolocation.getCurrentPosition(onSuccess, onError);
-				var options = { timeout: 30000 };
-				watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
+				//var options = { timeout: 30000 };
+				//watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
 			}
 			
 			function checkStorage() {
