--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						dataType   : 'json',
 						success    : function(response) {
 							//console.error(JSON.stringify(response));
-							alert('Works!');
+							alert('Works!'+response);
 						},
 						error      : function() {
 							//console.error("error");
