--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>CVK TEST</title>
-		<link rel="stylesheet" href="lib/jquery-mobile/jquery.mobile-1.3.2.min.css" />
-		<!-- bxSlider CSS file -->
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+        <!-- bxSlider CSS file -->
 		<link href="css/jquery.bxslider.css" rel="stylesheet" />
-        <script src="lib/jquery/jquery-1.9.1.min.js"></script>          
-        <script src="lib/jquery-mobile/jquery.mobile-1.3.2.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>          
+        <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
         <script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
 			var watchID = null;
