--- a/index.html
+++ b/index.html
@@ -91,5 +91,5 @@
 	</body>
 	<!-- bxSlider Javascript file -->
 	<script src="js/jquery.bxslider.min.js"></script>
-	<!--<script type="text/javascript" src="phonegap.js"></script>-->
+	<script type="text/javascript" src="phonegap.js"></script>
 </html>
