--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 			function onDeviceReady() {
 				alert('here');
 				var ss_image = '<img src="res/screen/android/screen-ldpi-portrait.png" />';
-				alert(ss_image);
-				//$('#page_splash').html(ss_image);
+				$('#page_splash').html(ss_image);
 				$.ajax({
 						type       : "POST",
 						url        : "http://system-hostings.dev.wiredelta.com/colomer/api/offers",
